# airbnb-clone

./: README.md
airbnb-clone-backend/: .gitignore  db.sqlite3  pyproject.toml
airbnb-clone-backend/bookings/: models.py  serializers.py
airbnb-clone-backend/bookings/migrations/: 0001_initial.py  0002_booking_guests.py  0003_alter_booking_experience_alter_booking_room_and_more.py
airbnb-clone-backend/categories/: models.py  serializers.py
airbnb-clone-backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
airbnb-clone-backend/config/: settings.py  urls.py
airbnb-clone-backend/direct_messages/: models.py
airbnb-clone-backend/direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
airbnb-clone-backend/experiences/: models.py  views.py
airbnb-clone-backend/experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details_and_more.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py
airbnb-clone-backend/houses/: models.py
airbnb-clone-backend/houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
airbnb-clone-backend/medias/: models.py  views.py
airbnb-clone-backend/medias/migrations/: 0001_initial.py  (+2 more)
airbnb-clone-backend/reviews/: admin.py  models.py  serializers.py
airbnb-clone-backend/rooms/: admin.py  models.py  serializers.py  tests.py  views.py
airbnb-clone-backend/users/: admin.py  models.py  views.py
airbnb-clone-backend/wishlists/: views.py
(+13 files in other folders)
